# Proj8315Client

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ThirdPartyAssets.txt  build-assets.sh  build-docker.sh  build-wasm.sh  build.sh  clear-emcache.sh  docker-compose.yml  nginx.conf  performance-research.txt  shell.html  start-container.sh  useful-stuff.txt
assets/: ObjectVisualProperties.json  config.conf
assets/shaders/: FontShader.frag  FontShader.vert  GUIShader.frag  GUIShader.vert  SkinnedShader.frag  SkinnedShader.vert  StaticShader.frag  StaticShader.vert  TerrainShader.frag  TerrainShader.vert
game/: BitShit.hpp  Main.cpp
game/net/: ByteBuffer.cpp  ByteBuffer.h  Client.cpp  Client.h  NetCommon.h
game/net/platform/web/: WebClient.cpp  WebClient.h
game/net/requests/: Commands.cpp  Commands.h  Request.cpp  Request.h
game/net/requests/platform/web/: WebRequest.cpp  WebRequest.h
game/scenes/: .MainMenu.cpp.swp  .MainMenu.h.swp  BaseScene.cpp  BaseScene.h  ChatTest.cpp  ChatTest.h  CreateFactionMenu.cpp  CreateFactionMenu.h  DeploymentMenu.cpp  DeploymentMenu.h  InGame.cpp  InGame.h  LoginMenu.cpp  LoginMenu.h  MainMenu.cpp  MainMenu.h  RegisterMenu.cpp  RegisterMenu.h  WebSockTest.cpp  WebSockTest.h
game/ui/: ui.cpp  ui.h
game/world/: Faction.cpp  Faction.h  Object.cpp  Object.h  Objects.cpp  Objects.h  Tile.cpp  Tile.h  User.cpp  User.h  World.cpp  World.h
game/world/tileAnimators/: EffectAnimator.h
notes/: TileStateBits.txt  TileStateBits_Effect.txt
site-conf/: .htaccess  mime.types
src/: CameraUtils.cpp  CameraUtils.h  Main.cpp
src/net/: Client.cpp  Client.h
src/net/platform/web/: WebClient.cpp  WebClient.h
src/scenes/: BaseScene.cpp  BaseScene.h  InGame.cpp  InGame.h  InGameLocal.cpp  InGameLocal.h  MainMenu.cpp  MainMenu.h
src/ui/: InGameUI.cpp  InGameUI.h  Panel.cpp  Panel.h  SelectedPanel.cpp  SelectedPanel.h  SpawnMenu.cpp  SpawnMenu.h  TerrainToolMenu.cpp  TerrainToolMenu.h  TileOptionsMenu.cpp  TileOptionsMenu.h  TopBarPanel.cpp  TopBarPanel.h  TravelMenu.cpp  TravelMenu.h
src/world/: MousePicker.cpp  MousePicker.h  Objects.cpp  Objects.h  World.cpp  World.h
